# launch_scoped_include

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
examples/: test_scoping_inner.launch.py  test_scoping_outer.launch.py  test_scoping_outer_override.launch.py
launch_scoped_include/actions/: __init__.py  scoped_include_action.py
